--- a/public/user/assets/css/style(1).css
+++ b/public/user/assets/css/style(1).css
@@ -458,8 +458,9 @@ h6,
 
 /*** Footer ***/
 .footer {
-    background: url(../img/footer.png) center center no-repeat;
+    background: url(../img/SchoolPass1.png) center center no-repeat;
     background-size: contain;
+    color: var(--primary)
 }
 
 .footer .btn.btn-social {
@@ -522,4 +523,38 @@ h6,
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+/* ===== PROFILE AVATAR FIX ===== */
+.profile-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* ===== NAVBAR ALIGN FIX ===== */
+.navbar-nav {
+  align-items: center;
+}
+
+/* Hilangkan panah dropdown */
+.dropdown-toggle::after {
+  display: none;
+}
+
+/* kompensasi overlap sidebar kiri */
+@media (min-width: 992px) {
+    .profile-card-right {
+        margin-top: 70px;
+    }
 }
